src/objects/ints__TUCR_Address__c.object
<CustomObject>
    <fields>
        <fullName>ints__AddrType__c</fullName>
        <label>Addr Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DateReported__c</fullName>
        <label>Date Reported</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Postal__c</fullName>
        <label>Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Prov__c</fullName>
        <label>Prov</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR Addresses</relationshipLabel>
        <relationshipName>TUCR_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR Address</label>
    <nameField>
        <displayFormat>TUCR_ADDR-{000000000}</displayFormat>
        <label>TUCR Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>